@@ -1,4 +1,4 @@
-FROM gradle:7.5.1-jdk11
+FROM gradle:7.6-jdk17
 USER root
 WORKDIR /http4k
 COPY build.gradle build.gradle
@@ -7,8 +7,8 @@ COPY apache4 apache4
 COPY core core
 COPY core-jdbc core-jdbc
 COPY core-pgclient core-pgclient
-RUN gradle --quiet apache4:shadowJar
+RUN gradle --quiet --no-daemon apache4:shadowJar
 
 EXPOSE 9000
 
-CMD ["java", "-server", "-XX:+UseNUMA", "-XX:+UseParallelGC", "-XX:+AggressiveOpts", "-XX:+AlwaysPreTouch", "-jar", "apache4/build/libs/http4k-benchmark.jar"]
+CMD ["java", "-server", "-XX:+UseNUMA", "-XX:+UseParallelGC", "-XX:+AlwaysPreTouch", "-jar", "apache4/build/libs/http4k-benchmark.jar"]
